<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:text="@string/message_title_text"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/sub_message_text"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/eodContentEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/hint_text"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="top|start"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/clear_button_desc" />

        <!-- Added Space to Push Buttons to Right -->
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/design_default_color_primary_variant"
            android:text="@string/cancel_text"
            app:strokeColor="#FFFFFF" />

        <Button
            android:id="@+id/save_button"
            android:text="@string/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>



</LinearLayout>