<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@color/white_smoke"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/emailCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:cardCornerRadius="16dp"
        android:layout_alignParentTop="true"
        app:cardElevation="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:text="@string/receiver_label"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/receiver_text" />



    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_marginTop="8dp"
        android:layout_below="@+id/emailCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="end"
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingBottom="24dp"
                    android:textSize="18sp"
                    android:text="@string/empty_date" />

                <TextView
                    android:id="@+id/greetingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting_text"
                    android:textSize="18sp"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:paddingBottom="24dp"
                    android:id="@+id/contentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/empty_content" />

                <TextView
                    android:id="@+id/closingRemarksTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closing_text"
                    android:textSize="18sp"
                    android:paddingBottom="16dp"/>

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_text"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/positionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/position_text"
                    android:textColor="@color/purple"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <!-- Button Layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addADateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_a_date_text"
            android:background="@drawable/outlined_button_bg"
            android:textColor="@color/purple"
            tools:ignore="VisualLintButtonSize" />


        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/addAContentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_a_content_text"
            android:background="@drawable/outlined_button_bg"
            android:textColor="@color/purple"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_text"
            tools:ignore="VisualLintButtonSize" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>
